<resources>
    <string name="app_name">IF-City Pizza</string>
    <string name="closebutton">Close Button for Activity</string>
    <string name="email">Email Id</string>
    <string name="registered_emailid">Please enter your Registered Email Id below:</string>
    <string name="back">BACK</string>
    <string name="submit">SUBMIT</string>
    <string name="passowrd">Password</string>
    <string name="login">LOGIN</string>
    <string name="show_pwd">Show Password</string>
    <string name="forgot">Forgot password?</string>
    <string name="newUser">Not a Member yet? Sign Up here.</string>
    <string name="hide_pwd">Hide Password</string>
    <string name="signUp">SIGN UP</string>
    <string name="fullName">Full Name</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="location">Location</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="terms_conditions">By clicking SignUp you agree all the Terms and Conditions.</string>
    <string name="already_user">Already have Account? Login here.</string>
    <string name="get_data">Get Data</string>
    <string name="push_data">Push data</string>
    <string name="make_call">Зателефонувати</string>
    <string name="add_to_cart">В кошик</string>
    <string name="lifecell">Lifecell call</string>
    <string name="vodafone">Vodafone call</string>
    <string name="kyivstar">Kyivstar call</string>
    <string name="ukrtelecom">Ukrtelecom call</string>
    <string name="search_hint">Search pizza</string>
    <string name="azteca_standart">30 см.</string>
    <string name="azteca_large">50 см.</string>
    <string name="order">Замовити</string>
    <string name="delivery">Доставка</string>
</resources>
