<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <ImageButton
            android:id="@+id/image_vodafone"
            android:contentDescription="@string/vodafone"
            android:layout_width="200dp"
            android:layout_height="52dp"
            android:paddingTop="12dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:background="@color/white"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/vodafone" />

        <ImageButton
            android:id="@+id/image_kyivstar"
            android:contentDescription="@string/kyivstar"
            android:layout_width="200dp"
            android:layout_height="52dp"
            android:paddingTop="12dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:layout_below="@+id/image_vodafone"
            android:layout_centerHorizontal="true"
            android:background="@color/white"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/kyivstar" />

        <ImageButton
            android:id="@+id/image_lifecell"
            android:contentDescription="@string/lifecell"
            android:layout_width="200dp"
            android:layout_height="52dp"
            android:paddingTop="12dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:layout_below="@+id/image_kyivstar"
            android:layout_centerHorizontal="true"
            android:background="@color/white"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/lifecell" />

        <ImageButton
            android:id="@+id/image_ukrtelecom"
            android:contentDescription="@string/ukrtelecom"
            android:layout_width="200dp"
            android:layout_height="52dp"
            android:paddingTop="12dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:paddingBottom="12dp"
            android:layout_below="@+id/image_lifecell"
            android:layout_centerHorizontal="true"
            android:background="@color/white"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/ukrtelecom" />

    </RelativeLayout>

</RelativeLayout>